--- a/Broome_Taylor_Project 2/styles/style.css
+++ b/Broome_Taylor_Project 2/styles/style.css
@@ -17,6 +17,7 @@
      line-height: 100%;
      font-size: 50px;
      text-align: center;
+     text-shadow: 2px 2px 7px #1D0413;
      border: 3px solid #1D0413;
      background-color: #E77BBD;
      box-shadow: 5px 5px 3px #1D0413;
